tests/xml/invalidxml/obsTime/negtime.xml.README
negtime.xml: BAD because obsTime is negative
